--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router": "^5.2.0",
     "react-scripts": "^4.0.1",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "twitter": "1.3.0"
   },
@@ -27,7 +28,12 @@
   },
   "proxy": "http://localhost:4000",
   "devDependencies": {
-    "concurrently": "^3.5.1"
+    "@testing-library/react": "^11.2.2",
+    "concurrently": "^3.5.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
+    "react-test-renderer": "^17.0.1"
   },
   "browserslist": [
     ">0.2%",
