--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "proxy": "http://localhost:4000",
   "devDependencies": {
     "@testing-library/react": "^11.2.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "concurrently": "^3.5.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
